Added blog post about oomph and added downloads page for CLI tool

--- a/Cshare.html
+++ b/Cshare.html
@@ -117,9 +117,13 @@
 		<!-- /.container -->
 </nav>
 
-      <p>With the Information Model Repository,  <strong>Platform vendors</strong> are able to manage, share and reuse existing Information Models directly from the Tool set or via the Web.</p>
+      <!--base to have relative path for offline navigation -->
+
+<p>With the Information Model Repository,  <strong>Platform vendors</strong> are able to manage, share and reuse existing Information Models directly from the Tool set or via the Web.</p>
 
 <p><a href="http://vorto.eclipse.org/repo" target="_blank">Information Model Repository</a></p>
+
+<p><a href="./documentation/vorto-repository/share-web.html"> Find out more on how to Share Information Models</a></p>
 
     <!-- Footer -->
 <footer>
