updated links to milestones URL for milestone 3

--- a/documentation/installation/installation.html
+++ b/documentation/installation/installation.html
@@ -559,7 +559,7 @@
 
 <h2 id="getting-the-vorto-plug-ins">Getting the Vorto Plug-ins</h2>
 
-<p>The Vorto plug-ins are available on the Eclipse update site server. The URL to the server is <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/</a>. You must add this repository to your IDE or, alternatively, import the Vorto plug-in zip archive to get the Vorto plug-ins.</p>
+<p>The Vorto plug-ins are available on the Eclipse update site server. The URL to the server is <a href="http://download.eclipse.org/vorto/update/milestones/" title="http://download.eclipse.org/vorto/update/milestones/">http://download.eclipse.org/vorto/update/milestones</a>. You must add this repository to your IDE or, alternatively, import the Vorto plug-in zip archive to get the Vorto plug-ins.</p>
 
 <p><strong>Proceed as follows</strong></p>
 
@@ -574,7 +574,7 @@ Otherwise proceed with the next step.</li>
   <li>Add the <em>Vorto plug-ins repository</em> URL:<br />
 a. Click the <strong>Add…</strong> button beside the <strong>Work with</strong> field. The <strong>Add Repository</strong> dialog opens.<br />
 b. Enter a Name (optionally, e.g., <em>Vorto</em>).<br />
-c. Enter the <em>Vorto plug-ins repository</em> URL <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/" title="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/">http://download.eclipse.org/vorto/update/milestones/0.4.0_M2</a> into the <strong>Location</strong> field.<br />
+c. Enter the <em>Vorto plug-ins repository</em> URL <a href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/" title="http://download.eclipse.org/vorto/update/milestones/">http://download.eclipse.org/vorto/update/milestones</a> into the <strong>Location</strong> field.<br />
 d. Click <strong>OK</strong>.</li>
 </ol>
 
