--- a/downloads/index.html
+++ b/downloads/index.html
@@ -210,10 +210,10 @@ Vorto Toolset
 
 <tr>
 <td style="text-align: center; white-space: nowrap;">
-<a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/" data-toggle="tooltip" class="tip-right" title="Install Vorto using the Standard Eclipse Update mechanism:Choose Help -> Install New Software... from the menu bar and Add...
+<a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones" data-toggle="tooltip" class="tip-right" title="Install Vorto using the Standard Eclipse Update mechanism:Choose Help -> Install New Software... from the menu bar and Add...
 Insert the update site URL [Vorto Update Site] Select the components of your choice and complete the wizard by clicking the Next button untilyou can click Finish. After a quick download and a restart of Eclipse,
 Vorto is ready to be used."><i class="fa fa-download fa-2x"></i> <br> <b>Vorto Update Site (Stable)</b></a>
-<a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones/0.4.0_M2/org.eclipse.vorto.update-0.4.0_M2.zip" data-toggle="tooltip" class="tip-right" title="Download offline archive from [Vorto zip]. The user then adds this zip file from Help -> Install New Software -> Add -> Archive."><i class="fa fa-file-archive-o fa-2x"></i> <br> <b> Vorto zip (Stable)</b></a>
+<a class="has-popover btn btn-primary btn-large" style="width: auto;" href="http://download.eclipse.org/vorto/update/milestones/org.eclipse.vorto.update-0.4.0_M3.zip" data-toggle="tooltip" class="tip-right" title="Download offline archive from [Vorto zip]. The user then adds this zip file from Help -> Install New Software -> Add -> Archive."><i class="fa fa-file-archive-o fa-2x"></i> <br> <b> Vorto zip (Stable)</b></a>
 </td>
 </tr>
 
